<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/CName"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_name" />

            <EditText
                android:id="@+id/customerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/customer_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:singleLine="true" />
        </TableRow>

        <TableRow
            android:id="@+id/CAddress"
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/customerAddressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_address" />

            <EditText
                android:id="@+id/customerAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="6"
                android:gravity="start|top"
                android:hint="@string/customer_address"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

        </TableRow>

        <TableRow
            android:id="@+id/CTown"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/customerTownLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/town" />

            <EditText
                android:id="@+id/customerTown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/town"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress" />

        </TableRow>

        <TableRow
            android:id="@+id/CCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/customerCityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city" />

            <EditText
                android:id="@+id/customerCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:capitalize="words"
                android:ems="10"
                android:hint="@string/city"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress" />
        </TableRow>

        <TableRow
            android:id="@+id/CPostCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/postCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_code" />

            <EditText
                android:id="@+id/customerPostCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:capitalize="characters"
                android:ems="10"
                android:hint="@string/post_code"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress" />
        </TableRow>

        <TableRow
            android:id="@+id/CTelephone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/customerTelephoneLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_tel" />

            <EditText
                android:id="@+id/customerTelephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/customer_tel"
                android:importantForAutofill="no"
                android:inputType="phone" />
        </TableRow>

        <TableRow
            android:id="@+id/CEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/customerEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer_e_mail" />

            <EditText
                android:id="@+id/customerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/customer_e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

        </TableRow>

    </TableLayout>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tableLayout">

        <EditText
            android:id="@+id/customerObj"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>